# PracticePrograms

./: .gitignore  README.md
MyWorkspace_C/Auto/: CMakeLists.txt  main.cpp
MyWorkspace_C/C/: CMakeLists.txt.user.49105b7  ISerialFilterService.h  SerialFilter.c  main.c
MyWorkspace_C/Diamond_Problem/: CMakeLists.txt  main.cpp
MyWorkspace_C/Exchange/: CMakeLists.txt  main.cpp
MyWorkspace_C/Fibnocci/: CMakeLists.txt  main.c
MyWorkspace_C/HashDefine/: CMakeLists.txt  main.c
MyWorkspace_C/Initialization/: CMakeLists.txt  main.cpp
MyWorkspace_C/Interpositioning/: a.out  hello.c  helloc  malloc.h  mymalloc.c
MyWorkspace_C/LinkedList/: main.cpp
MyWorkspace_C/Malloc/: CMakeLists.txt  main.c
MyWorkspace_C/Pointers/: CMakeLists.txt  main.c
MyWorkspace_C/PowerOf2/: CMakeLists.txt  main.cpp
MyWorkspace_C/Struct/: main.c
MyWorkspace_C/Threads/: CMakeLists.txt  main.c
MyWorkspace_C/Trial/: One  One.cpp  One.s  a.out
Python/: AT.log_Human  ATLogTimeStampConverter.py
Rust/: .gitignore  Readme.Md  Readme.txt  rust_debug_tasks.json
Workspace_Cpp/: CMakeCache.txt
Workspace_Cpp/AdapterPattern/: CMakeLists.txt  Duck.h  FlyBehavior.h  MallardDuck.h  NoWings.h  Quack.h  QuackBehavior.h  Simulator.cpp  Squeak.h  Wings.h
Workspace_kt/: Cell_Test.c
Workspace_kt/rfid_test_app/: CMakeLists.txt  rfid_test.c
mac/: .bash_aliases_backup  .bash_login  .gitconfig  .screenrc  .zsh_aliases  .zsh_history  .zshrc  git-radar.diff  sublime_settings.json  untitled.sh  vscode_settings.json
mac_setup/: .bash_PS1  .zsh_history  .zshrc
profectura/: .firebaserc
(+239 files in other folders)
